feat: add archunit configuration